--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,10 @@ solution: LibreMetaverse.sln
 matrix:
   include:
     - mono: latest
+    
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: master    
