--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ matrix:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  github_token:  fc8ecf56a4444d89771d7753e1c7cb2197f19273
   on:
     branch: master    
